# mongolb

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  SearchModule.cpp  SearchModule.sln  backendList.json  build.sh  mainlb.cpp
backend/: CMakeLists.txt  backend.cpp  mongodb.cpp  search.cpp
backend/rip/: mongodb.cpp
dummy_data/: local.Data.json
src/: mainlb.cpp
src/client/: client.cpp
src/handler/: handshake.cpp  handshake.h
